about section update

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -29,15 +29,20 @@
             <div class="home-image">
             <img src="images/sneha.png" alt="Sneha Vaghela">
         </div>
-            <div class="text">
-                <div class="text-one">Hello,</div>
-                <div class="text-two">I'm Sneha Vaghela</div>
-                <div class="text-three">Full Stack Developer</div>
-             <div class="button">
-                <button onclick="window.location.href='mailto:snehavaghela3105@gmail.com'">Let's Connect</button>
-            </div>   
-            </div>
-            
+           <div class="about-text">
+     
+      <p>
+        Hi! I'm <strong>Sneha Vaghela</strong>, an Intern at Cybercom Creation.
+        This internship has given me the opportunity to work on real-world software projects, collaborate with experienced developers,
+and learn how professional applications are built from scratch. 
+I am learning to write clean, efficient code and understand the full cycle of web development—from designing user interfaces
+to implementing backend functionality. I enjoy solving problems, experimenting with new technologies, and improving
+my skills every day.  
+
+
+      </p>
+    </div>
+
         </div>
     </section>
 
