intro page update

--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNEHA VAGHELA | PORTFOLIO</title>
-    <link rel="icon" type="image/x-icon" href="./images/sneha.png">
+    <link rel="icon" type="image/x-icon" href="./images/software developer icon.jpg">
     <link rel="stylesheet" href="styles.css">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+/>
 </head>
 <body>
     <!-- navbar -->
@@ -13,17 +17,16 @@
         <nav class="nav_bar">
             <ul>
                 <li><a class="nav_links" href="#home">Home</a></li>
-                <li><a class="nav_links" href="#about">About</a></li>
+                <li><a class="nav_links" href="#home">About</a></li>
                 <li><a class="nav_links" href="#skills">Skills
                 </a></li>
-                <li><a class="nav_links" href="#projects">Projects</a></li>
                 <li><a class="nav_links" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Home section -->
-    <section class="home">
+    <section class="home" id="home">
 
         <div class="home-content">
             <div class="home-image">
@@ -48,7 +51,7 @@ my skills every day.
 
 
     <!-- Skills Section -->
-<section class="skills" id="skills">
+<section class="skills" id="skills" >
   <h2 class="section-title">My Skills</h2>
 
   <div class="skills-container">
@@ -85,6 +88,28 @@ my skills every day.
 
   </div>
 </section>
+
+<section class="contact" id="contact">
+ <h2 class="section-title">Contact Me</h2>
+
+  <p>Feel free to reach out via email or connect with me on GitHub and LinkedIn!</p>
+
+  <div class="contact-icons">
+    <a href="mailto:snehavaghela3105@gmail.com" class="contact-icon">
+      <i class="fas fa-envelope"></i>
+    </a>
+
+   
+    <a href="https://github.com/SV3105/CCC-Internship/tree/main/PORTFOLIO" class="contact-icon" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
+
+   
+    <a href="https://www.linkedin.com/in/sneha-vaghela/" class="contact-icon" target="_blank">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
+  </section>
 
 
     <!-- footer -->
