--- a/HTML-INTRODUCTION/index.html
+++ b/HTML-INTRODUCTION/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML-INTRODUCTION</title>
     <link rel="icon" type="image/x-icon" href="/images/html-icon.png">
+    <style>
+        table{
+            margin-top: 15px;
+        }
+table, th, td {
+  border:1px solid black;
+  
+}
+th,td{
+    padding: 10px;
+}
+tr:nth-child(odd) {
+  background-color: whitesmoke;
+}
+</style>
 </head>
 
 <body style="background-color: rgb(179, 247, 248);">
@@ -25,5 +40,31 @@
     <h2 style="margin-left: 15px;"><u>HTML LOGO</u></h2>
     <img  style="width: 150px; height: 150px; margin-top: 15px; margin-left: 15px;" src="https://tse3.mm.bing.net/th/id/OIP.lxMbLFRw0sgOlOwjC62ySwHaKc?rs=1&pid=ImgDetMain&o=7&rm=3" alt="HTML logo">
     
+    <!-- tables -->
+     <table>
+  <tr>
+    <th>Name</th>
+    <th>Age</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>ABC</td>
+    <td>16</td>
+    <td>India</td>
+  </tr>
+  <tr>
+    <td>XYZ</td>
+    <td>15</td>
+    <td>USA</td>
+  </tr>
+  <tr>
+    <td>GHI</td>
+    <td>18</td>
+    <td>UAE</td>
+  </tr>
+</table>
+
+
+
 </body>
 </html>
