--- a/Day-2/PORTFOLIO/index.html
+++ b/Day-2/PORTFOLIO/index.html
@@ -35,7 +35,7 @@
            <div class="about-text">
      
       <p>
-        Hi! I'm <strong>Sneha Vaghela</strong>, an Intern at Cybercom Creation.
+        <h2>Hello! I'm <strong>Sneha Vaghela,</strong></h2>an Intern at Cybercom Creation.
         This internship has given me the opportunity to work on real-world software projects, collaborate with experienced developers,
 and learn how professional applications are built from scratch. 
 I am learning to write clean, efficient code and understand the full cycle of web development—from designing user interfaces
