--- a/Day-1/HTML-INTRODUCTION/index.html
+++ b/Day-1/HTML-INTRODUCTION/index.html
@@ -6,6 +6,9 @@
     <title>HTML-INTRODUCTION</title>
     <link rel="icon" type="image/x-icon" href="/images/html-icon.png">
     <style>
+        body{
+            margin-left: 50px;
+        }
         table{
             margin-top: 15px;
         }
@@ -33,14 +36,20 @@ tr:nth-child(odd) {
         HY    !
         MY NAME IS        SNEHA.
     </pre>
+
+    <p> 1 <sup>2</sup> </p>
+    <p>H <sub>2</sub> O</p>
+    <p>It is <mark>Important</mark> line.</p>
+
     <!-- this is comment --> 
     <p style="font-size: 25px;"><q>This is  <abbr title="Hyper Text Markup Language">HTML</abbr> document.</q></p>
     <a href="https://www.w3schools.com/html/html_links.asp">click here to learn HTML-LINKS.</a>
     <br />
-    <h2 style="margin-left: 15px;"><u>HTML LOGO</u></h2>
+
     <img  style="width: 150px; height: 150px; margin-top: 15px; margin-left: 15px;" src="https://tse3.mm.bing.net/th/id/OIP.lxMbLFRw0sgOlOwjC62ySwHaKc?rs=1&pid=ImgDetMain&o=7&rm=3" alt="HTML logo">
     
     <!-- tables -->
+     <p>Table</p>
      <table>
   <tr>
     <th>Name</th>
@@ -64,7 +73,25 @@ tr:nth-child(odd) {
   </tr>
 </table>
 
+<p>Lists</p>
+<ul style="list-style-type: square;">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+</ul>
 
+<ol type="1" start="5">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+</ol>
+
+<dl>
+  <dt>HTML</dt>
+  <dd>- Hyper Text Markup Language</dd>
+  <dt>CSS</dt>
+  <dd>- Cascading Style Sheets </dd>
+</dl>
 
 </body>
 </html>
