portfolio update and product pages completed

--- a/Day-2/PORTFOLIO/index.html
+++ b/Day-2/PORTFOLIO/index.html
@@ -1,121 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SNEHA VAGHELA | PORTFOLIO</title>
-    <link rel="icon" type="image/x-icon" href="./images/software developer icon.jpg">
-    <link rel="stylesheet" href="styles.css">
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-/>
-</head>
-<body>
+      rel="icon"
+      type="image/x-icon"
+      href="./images/software developer icon.jpg"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- navbar -->
     <header>
-        <nav class="nav_bar">
-            <ul>
-                <li><a class="nav_links" href="#home">Home</a></li>
-                <li><a class="nav_links" href="#home">About</a></li>
-                <li><a class="nav_links" href="#skills">Skills
-                </a></li>
-                <li><a class="nav_links" href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+      <nav class="nav_bar">
+        <ul>
+          <li><a class="nav_links" href="#home">Home</a></li>
+          <li><a class="nav_links" href="#home">About</a></li>
+          <li><a class="nav_links" href="#skills">Skills </a></li>
+          <li><a class="nav_links" href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!--Home section -->
     <section class="home" id="home">
-
-        <div class="home-content">
-            <div class="home-image">
-            <img src="images/sneha.png" alt="Sneha Vaghela">
+      <div class="home-content">
+        <div class="home-image"></div>
+        <div class="about-text">
+          <h2>Hello! I'm <strong>Sneha Vaghela,</strong></h2>
+          <p>
+            an Intern at Cybercom Creation. This internship has given me the
+            opportunity to work on real-world software projects, collaborate
+            with experienced developers, and learn how professional applications
+            are built from scratch. I am learning to write clean, efficient code
+            and understand the full cycle of web development—from designing user
+            interfaces to implementing backend functionality. I enjoy solving
+            problems, experimenting with new technologies, and improving my
+            skills every day.
+          </p>
         </div>
-           <div class="about-text">
-     
-      <p>
-        <h2>Hello! I'm <strong>Sneha Vaghela,</strong></h2>an Intern at Cybercom Creation.
-        This internship has given me the opportunity to work on real-world software projects, collaborate with experienced developers,
-and learn how professional applications are built from scratch. 
-I am learning to write clean, efficient code and understand the full cycle of web development—from designing user interfaces
-to implementing backend functionality. I enjoy solving problems, experimenting with new technologies, and improving
-my skills every day.  
-
-
-      </p>
-    </div>
-
-        </div>
+      </div>
     </section>
 
-
     <!-- Skills Section -->
-<section class="skills" id="skills" >
-  <h2 class="section-title">My Skills</h2>
+    <section class="skills" id="skills">
+      <h2 class="section-title">My Skills</h2>
 
-  <div class="skills-container">
+      <div class="skills-container">
+        <div class="skill-card">
+          <h3>Frontend</h3>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>React.js</li>
+            <li>Tailwind CSS</li>
+          </ul>
+        </div>
 
-    <div class="skill-card">
-      <h3>Frontend</h3>
-      <ul>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>JavaScript</li>
-        <li>React.js</li>
-        <li>Tailwind CSS</li>
-      </ul>
-    </div>
+        <div class="skill-card">
+          <h3>Backend</h3>
+          <ul>
+            <li>ExpressJS</li>
+            <li>NodeJS</li>
+          </ul>
+        </div>
 
-    <div class="skill-card">
-      <h3>Backend</h3>
-      <ul>
-        <li>ExpressJS</li>
-        <li>NodeJS</li>
-      </ul>
-    </div>
+        <div class="skill-card">
+          <h3>Data & Tools</h3>
+          <ul>
+            <li>SQL</li>
+            <li>Git & GitHub</li>
+            <li>Postman</li>
+            <li>VS Code</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
+    <section class="contact" id="contact">
+      <h2 class="section-title">Contact Me</h2>
 
-    <div class="skill-card">
-      <h3>Data & Tools</h3>
-      <ul>
-        <li>SQL</li>
-        <li>Git & GitHub</li>
-        <li>Postman</li>
-        <li>VS Code</li>
-      </ul>
-    </div>
+      <p>
+        Feel free to reach out via email or connect with me on GitHub and
+        LinkedIn!
+      </p>
 
-  </div>
-</section>
+      <div class="contact-icons">
+        <a href="mailto:snehavaghela3105@gmail.com" class="contact-icon">
+          <i class="fas fa-envelope"></i>
+        </a>
 
-<section class="contact" id="contact">
- <h2 class="section-title">Contact Me</h2>
+        <a
+          href="https://github.com/SV3105/CCC-Internship/tree/main/PORTFOLIO"
+          class="contact-icon"
+          target="_blank"
+        >
+          <i class="fab fa-github"></i>
+        </a>
 
-  <p>Feel free to reach out via email or connect with me on GitHub and LinkedIn!</p>
-
-  <div class="contact-icons">
-    <a href="mailto:snehavaghela3105@gmail.com" class="contact-icon">
-      <i class="fas fa-envelope"></i>
-    </a>
-
-   
-    <a href="https://github.com/SV3105/CCC-Internship/tree/main/PORTFOLIO" class="contact-icon" target="_blank">
-      <i class="fab fa-github"></i>
-    </a>
-
-   
-    <a href="https://www.linkedin.com/in/sneha-vaghela/" class="contact-icon" target="_blank">
-      <i class="fab fa-linkedin"></i>
-    </a>
-  </div>
-  </section>
-
+        <a
+          href="https://www.linkedin.com/in/sneha-vaghela/"
+          class="contact-icon"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </section>
 
     <!-- footer -->
     <footer class="footer">
-        <p>Created By Sneha Vaghela | © 2026 All Rights Reserved</p>
+      <p>Created By Sneha Vaghela | © 2026 All Rights Reserved</p>
     </footer>
-
-</body>
+  </body>
 </html>
