--- a/Day-3/Product-Page/HTML/index.html
+++ b/Day-3/Product-Page/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     <h1 class="page-title">Product List</h1>
@@ -24,72 +24,72 @@
       
             <tr>
                 <td>
-                    <img src="Images/laptop.webp" alt="laptop">
+                    <img src="../Images/laptop.webp" alt="laptop">
                 </td>
                 <td>Laptop</td>
                 <td>Lenovo IdeaPad Slim 1 AMD Ryzen 5 Hexa Core 5500U - (8 GB/512 GB SSD/Windows 11 Home) 15ACL6 | 15ALC7 2 Thin and Light Laptop </td>
                 <td>Rs. 39,999 </td>
                 <td class="in-stock">In Stock</td>
                 <td>
-                    <button class="btn">View</button>
+                    <button class="btn" onclick="window.location.href='laptop.html'">View</button>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <img src="Images/printer.webp" alt="printer">
+                    <img src="../Images/printer.webp" alt="printer">
                 </td>
                 <td>Printer</td>
                 <td>Canon PIXMA MegaTank G1730 Single Function Color Ink Tank Printer with Black (70 ml) & Color (40 ml) ink bottles</td>
                 <td>Rs. 8,899</td>
                 <td class="in-stock">In Stock</td>
                 <td>
-                    <button class="btn">View</button>
+                    <button class="btn" onclick="window.location.href='Printer.html'">View</button>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <img src="Images/camera.webp" alt="camera">
+                    <img src="../Images/camera.webp" alt="camera">
                 </td>
-                <td>Mirrorless Camera</td>
+                <td>Camera</td>
                 <td>SONY Alpha ILCE-6400M APS-C Mirrorless Camera with 18-135 mm Zoom Lens Featuring Eye AF and 4K movie recording</td>
                 <td>Rs. 45,000</td>
-                <td class="out-stock">Out of Stock</td>
+                <td class="in-stock">In Stock</td>
                 <td>
-                    <button class="btn-disabled">View</button>
+                    <button class="btn" onclick="window.location.href='Camera.html'">View</button>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <img src="Images/Hair dryer.webp" alt="Hair Dryer">
+                    <img src="../Images/Hair dryer.webp" alt="Hair Dryer">
                 </td>
                 <td>Hair Dryer</td>
-                <td>NOVA NHP 8202 Hair Dryer </td>
+                <td>NOVA NHP 8100/05 Hair Dryer 1200W </td>
                 <td>Rs. 2,000</td>
                 <td class="in-stock">In Stock</td>
                 <td>
-                    <button class="btn">View</button>
+                    <button class="btn" onclick="window.location.href='HairDryer.html'">View</button>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <img src="Images/earbuds.webp" alt="earbuds">
+                    <img src="../Images/earbuds.webp" alt="earbuds">
                 </td>
                 <td>Earbuds</td>
                 <td>GWALBROS A13 TWS AIRPOD black Earbud Bluetooth Bluetooth </td>
                 <td>Rs. 1,000</td>
                 <td class="in-stock">In Stock</td>
                 <td>
-                    <button class="btn">View</button>
+                    <button class="btn" onclick="window.location.href='EarBuds.html'">View</button>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <img src="Images/powerbank.webp" alt="powerbank">
+                    <img src="../Images/powerbank.webp" alt="powerbank">
                 </td>
                 <td>Power Bank</td>
                 <td>AMYTEL 10000 mAh 15 W Mini Pocket Size Power Bank </td>
