--- a/Day-3/Product-Page/HTML/index.html
+++ b/Day-3/Product-Page/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1 class="page-title">Product List</h1>
@@ -24,7 +24,7 @@
       
             <tr>
                 <td>
-                    <img src="../Images/laptop.webp" alt="laptop">
+                    <img src="../images/laptop.webp" alt="laptop">
                 </td>
                 <td>Laptop</td>
                 <td>Lenovo IdeaPad Slim 1 AMD Ryzen 5 Hexa Core 5500U - (8 GB/512 GB SSD/Windows 11 Home) 15ACL6 | 15ALC7 2 Thin and Light Laptop </td>
@@ -37,7 +37,7 @@
 
             <tr>
                 <td>
-                    <img src="../Images/printer.webp" alt="printer">
+                    <img src="../images/printer.webp" alt="printer">
                 </td>
                 <td>Printer</td>
                 <td>Canon PIXMA MegaTank G1730 Single Function Color Ink Tank Printer with Black (70 ml) & Color (40 ml) ink bottles</td>
@@ -50,7 +50,7 @@
 
             <tr>
                 <td>
-                    <img src="../Images/camera.webp" alt="camera">
+                    <img src="../images/camera.webp" alt="camera">
                 </td>
                 <td>Camera</td>
                 <td>SONY Alpha ILCE-6400M APS-C Mirrorless Camera with 18-135 mm Zoom Lens Featuring Eye AF and 4K movie recording</td>
@@ -63,7 +63,7 @@
 
             <tr>
                 <td>
-                    <img src="../Images/Hair dryer.webp" alt="Hair Dryer">
+                    <img src="../images/Hair dryer.webp" alt="Hair Dryer">
                 </td>
                 <td>Hair Dryer</td>
                 <td>NOVA NHP 8100/05 Hair Dryer 1200W </td>
@@ -76,7 +76,7 @@
 
             <tr>
                 <td>
-                    <img src="../Images/earbuds.webp" alt="earbuds">
+                    <img src="../images/earbuds.webp" alt="earbuds">
                 </td>
                 <td>Earbuds</td>
                 <td>GWALBROS A13 TWS AIRPOD black Earbud Bluetooth Bluetooth </td>
@@ -89,7 +89,7 @@
 
             <tr>
                 <td>
-                    <img src="../Images/powerbank.webp" alt="powerbank">
+                    <img src="../images/powerbank.webp" alt="powerbank">
                 </td>
                 <td>Power Bank</td>
                 <td>AMYTEL 10000 mAh 15 W Mini Pocket Size Power Bank </td>
