--- a/Day-2/PORTFOLIO/index.html
+++ b/Day-2/PORTFOLIO/index.html
@@ -19,12 +19,13 @@
     <!-- navbar -->
     <header>
       <nav class="nav_bar">
+        
         <ul>
           <li><a class="nav_links" href="#home">Home</a></li>
-          <li><a class="nav_links" href="#home">About</a></li>
           <li><a class="nav_links" href="#skills">Skills </a></li>
           <li><a class="nav_links" href="#contact">Contact</a></li>
         </ul>
+     
       </nav>
     </header>
 
@@ -117,7 +118,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <p>Created By Sneha Vaghela | © 2026 All Rights Reserved</p>
+      <p>Created By Sneha Vaghela | &copy; 2026 All Rights Reserved</p>
     </footer>
   </body>
 </html>
