--- a/Day-3/Product-Page/HTML/laptop.html
+++ b/Day-3/Product-Page/HTML/laptop.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laptop-Shop Now</title>
-    <link rel="stylesheet" href="../CSS/products.css">
+    <link rel="stylesheet" href="../css/products.css">
 </head>
 <body>
     <div class="product-page">
 
         <!-- Left Section -->
         <div class="left-section">
-            <img src="../Images/laptop.webp" alt="laptop" class="product-img">
+            <img src="../images/laptop.webp" alt="laptop" class="product-img">
 
             <div class="action-button">
                 <a href="#" class="btn add-cart">Add to Cart 🛒</a>
