--- a/Day-4/index.html
+++ b/Day-4/index.html
@@ -9,8 +9,8 @@
 
   <body>
     <form
-      action="submit.php"
-      method="post"
+      onsubmit="alert('Form Submitted Successfully!'); this.reset(); return false;"
+      method="get"
       target="_self"
       enctype="multipart/form-data"
       autocomplete="on"
@@ -107,5 +107,6 @@
       <button type="submit">Submit</button>
       <button type="reset">Reset</button>
     </form>
+
   </body>
 </html>
