--- a/EasyCart/html/cart.html
+++ b/EasyCart/html/cart.html
@@ -14,53 +14,54 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Cart</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="auth.html">Login / Sign Up</a></li>
                 <li><a href="orders.html">My Orders</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="container">
-        <h1>Shopping Cart</h1>
-        <table class="cart-table">
-            <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Wireless Earbuds</td>
-                    <td>Rs. 1,299</td>
-                    <td>1</td>
-                    <td>Rs. 1,299</td>
-                </tr>
-                <tr>
-                    <td>Smart Watch</td>
-                    <td>Rs. 999</td>
-                    <td>2</td>
-                    <td>Rs. 1,998</td>
-                </tr>
-                <tr>
-                    <td>Laptop</td>
-                    <td>Rs. 44,000</td>
-                    <td>1</td>
-                    <td>Rs. 44,000</td>
-                </tr>
-            </tbody>
-        </table>
-        
-        <div class="cart-summary">
-            <h3>Price Summary</h3>
-            <p>Subtotal: Rs. 47,297</p>
-            <p>Shipping: Rs. 10.00</p>
-            <p>Tax: Rs. 43.20</p>
-            <h3>Total: Rs. 583.16</h3>
-            <a href="./checkout.html" class="btn">Proceed to Checkout</a>
+        <div class="page-content">
+            <h1>Shopping Cart</h1>
+            <table class="cart-table">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Wireless Earbuds</td>
+                        <td>Rs. 1,299</td>
+                        <td>1</td>
+                        <td>Rs. 1,299</td>
+                    </tr>
+                    <tr>
+                        <td>Smart Watch</td>
+                        <td>Rs. 999</td>
+                        <td>2</td>
+                        <td>Rs. 1,998</td>
+                    </tr>
+                    <tr>
+                        <td>Laptop</td>
+                        <td>Rs. 44,000</td>
+                        <td>1</td>
+                        <td>Rs. 44,000</td>
+                    </tr>
+                </tbody>
+            </table>
+            
+            <div class="cart-summary">
+                <h3>Price Summary</h3>
+                <p>Subtotal: Rs. 47,297</p>
+                <p>Shipping: Rs. 10.00</p>
+                <p>Tax: Rs. 43.20</p>
+                <h3>Total: Rs. 583.16</h3>
+                <a href="./checkout.html" class="btn">Proceed to Checkout</a>
+            </div>
         </div>
     </div>
 
