--- a/EasyCart/html/orders.html
+++ b/EasyCart/html/orders.html
@@ -14,56 +14,57 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Cart</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="auth.html">Login / Sign Up</a></li>
                 <li><a href="orders.html">My Orders</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="container">
-        <h1>My Orders</h1>
-        <div class="orders-list">
-            <div class="order-card">
-                <div class="order-header">
-                    <div>
-                        <h3>Order #12345</h3>
-                        <p>Placed on: January 15, 2026</p>
+        <div class="page-content">
+            <h1>My Orders</h1>
+            <div class="orders-list">
+                <div class="order-card">
+                    <div class="order-header">
+                        <div>
+                            <h3>Order #12345</h3>
+                            <p>Placed on: January 15, 2026</p>
+                        </div>
+                        <div>
+                            <p>Delivered</p>
+                        </div>
                     </div>
-                    <div>
-                        <p>Delivered</p>
-                    </div>
+                    <p>Items: Wireless Headphones, Smart Watch</p>
+                    <p><strong>Total: $299.98</strong></p>
                 </div>
-                <p>Items: Wireless Headphones, Smart Watch</p>
-                <p><strong>Total: $299.98</strong></p>
-            </div>
 
-            <div class="order-card">
-                <div class="order-header">
-                    <div>
-                        <h3>Order #12344</h3>
-                        <p>Placed on: January 10, 2026</p>
+                <div class="order-card">
+                    <div class="order-header">
+                        <div>
+                            <h3>Order #12344</h3>
+                            <p>Placed on: January 10, 2026</p>
+                        </div>
+                        <div>
+                            <p>In Transit</p>
+                        </div>
                     </div>
-                    <div>
-                        <p>In Transit</p>
-                    </div>
+                    <p>Items: Laptop Stand, Mechanical Keyboard</p>
+                    <p><strong>Total: $179.98</strong></p>
                 </div>
-                <p>Items: Laptop Stand, Mechanical Keyboard</p>
-                <p><strong>Total: $179.98</strong></p>
-            </div>
 
-            <div class="order-card">
-                <div class="order-header">
-                    <div>
-                        <h3>Order #12343</h3>
-                        <p>Placed on: January 5, 2026</p>
+                <div class="order-card">
+                    <div class="order-header">
+                        <div>
+                            <h3>Order #12343</h3>
+                            <p>Placed on: January 5, 2026</p>
+                        </div>
+                        <div>
+                            <p>Processing</p>
+                        </div>
                     </div>
-                    <div>
-                        <p>Processing</p>
-                    </div>
+                    <p>Items: USB-C Hub, Gaming Mouse</p>
+                    <p><strong>Total: $99.98</strong></p>
                 </div>
-                <p>Items: USB-C Hub, Gaming Mouse</p>
-                <p><strong>Total: $99.98</strong></p>
             </div>
         </div>
     </div>
