--- a/EasyCart/html/product-details.html
+++ b/EasyCart/html/product-details.html
@@ -14,36 +14,39 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="cart.html">Cart</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
+          <li><a href="auth.html">Login / Sign Up</a></li>
           <li><a href="orders.html">My Orders</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="container">
-      <div class="product-detail">
-        <div class="product-image"></div>
-        <div class="product-info">
-          <h2>Wireless Earbuds</h2>
-          <p class="price">Rs. 1,299</p>
-          <div class="product-description">
-            <h3>Description</h3>
-            <p>
-              Experience powerful sound in a compact design with our wireless
-              earbuds. Featuring crystal-clear audio, deep bass, and advanced
-              noise isolation, these earbuds are perfect for music lovers,
-              commuters, and professionals on the go.
-            </p>
-            <ul>
-              <li>Bluetooth 5.0 for fast and stable connectivity</li>
-              <li>Active Noise Cancellation for immersive sound</li>
-              <li>Up to 30 hours of battery life with charging case</li>
-              <li>Lightweight, ergonomic in-ear design for all-day comfort</li>
-              <li>Compact charging case for easy portability</li>
-            </ul>
-          </div>
-          <button class="btn">Add to Cart</button>
+      <div class="page-content">
+        <div class="product-detail">
+            <div class="product-image">
+                <img src="../images/earbuds.webp" alt="Wireless Earbuds">
+            </div>
+            <div class="product-info">
+            <h2>Wireless Earbuds</h2>
+            <p class="price">Rs. 1,299</p>
+            <div class="product-description">
+                <h3>Description</h3>
+                <p>
+                Experience powerful sound in a compact design with our wireless
+                earbuds. Featuring crystal-clear audio, deep bass, and advanced
+                noise isolation, these earbuds are perfect for music lovers,
+                commuters, and professionals on the go.
+                </p>
+                <ul>
+                <li>Bluetooth 5.0 for fast and stable connectivity</li>
+                <li>Active Noise Cancellation for immersive sound</li>
+                <li>Up to 30 hours of battery life with charging case</li>
+                <li>Lightweight, ergonomic in-ear design for all-day comfort</li>
+                <li>Compact charging case for easy portability</li>
+                </ul>
+            </div>
+            <button class="btn">Add to Cart</button>
+            </div>
         </div>
       </div>
     </div>
