add all folders

--- a/Day-2/PORTFOLIO/index.html
+++ b/Day-2/PORTFOLIO/index.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./images/software developer icon.jpg"
+      href="./images/software-developer-icon.jpg"
     />
     <link rel="stylesheet" href="styles.css" />
     <link
