product page erros fixed

--- a/EasyCart/html/cart.html
+++ b/EasyCart/html/cart.html
@@ -35,32 +35,32 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Wireless Earbuds</td>
-                        <td>Rs. 1,299</td>
-                        <td>1</td>
-                        <td>Rs. 1,299</td>
+                        <td data-label="Product">Wireless Earbuds</td>
+                        <td data-label="Price">Rs. 1,299</td>
+                        <td data-label="Quantity">1</td>
+                        <td data-label="Total">Rs. 1,299</td>
                     </tr>
                     <tr>
-                        <td>Smart Watch</td>
-                        <td>Rs. 999</td>
-                        <td>2</td>
-                        <td>Rs. 1,998</td>
+                        <td data-label="Product">Smart Watch</td>
+                        <td data-label="Price">Rs. 999</td>
+                        <td data-label="Quantity">2</td>
+                        <td data-label="Total">Rs. 1,998</td>
                     </tr>
                     <tr>
-                        <td>Laptop</td>
-                        <td>Rs. 44,000</td>
-                        <td>1</td>
-                        <td>Rs. 44,000</td>
+                        <td data-label="Product">Laptop</td>
+                        <td data-label="Price">Rs. 44,000</td>
+                        <td data-label="Quantity">1</td>
+                        <td data-label="Total">Rs. 44,000</td>
                     </tr>
                 </tbody>
             </table>
             
             <div class="cart-summary">
                 <h3>Price Summary</h3>
-                <p>Subtotal: Rs. 47,297</p>
-                <p>Shipping: Rs. 10.00</p>
-                <p>Tax: Rs. 43.20</p>
-                <h3>Total: Rs. 583.16</h3>
+                <p><span>Subtotal</span> <span>Rs. 47,297</span></p>
+                <p><span>Shipping</span> <span>Rs. 10.00</span></p>
+                <p><span>Tax (Est.)</span> <span>Rs. 43.20</span></p>
+                <h3><span>Total</span> <span>Rs. 47,350.20</span></h3>
                 <a href="./checkout.html" class="btn">Proceed to Checkout</a>
             </div>
         </div>
