--- a/EasyCart/html/orders.html
+++ b/EasyCart/html/orders.html
@@ -32,7 +32,7 @@
                             <p>Placed on: January 15, 2026</p>
                         </div>
                         <div>
-                            <p>Delivered</p>
+                            <span class="status-badge status-delivered">Delivered</span>
                         </div>
                     </div>
                     <p>Items: Wireless Headphones, Smart Watch</p>
@@ -46,7 +46,7 @@
                             <p>Placed on: January 10, 2026</p>
                         </div>
                         <div>
-                            <p>In Transit</p>
+                             <span class="status-badge status-transit">In Transit</span>
                         </div>
                     </div>
                     <p>Items: Laptop Stand, Mechanical Keyboard</p>
@@ -60,7 +60,7 @@
                             <p>Placed on: January 5, 2026</p>
                         </div>
                         <div>
-                            <p>Processing</p>
+                             <span class="status-badge status-processing">Processing</span>
                         </div>
                     </div>
                     <p>Items: USB-C Hub, Gaming Mouse</p>
