--- a/EasyCart/html/product-details.html
+++ b/EasyCart/html/product-details.html
@@ -22,14 +22,23 @@
     </header>
 
     <div class="container">
-      <div class="page-content">
+      <div class="page-content layout-transparent product-detail-container">
         <div class="product-detail">
             <div class="product-image">
                 <img src="../images/earbuds.webp" alt="Wireless Earbuds">
             </div>
             <div class="product-info">
             <h2>Wireless Earbuds</h2>
+            <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                <span>(4.5 stars)</span>
+            </div>
             <p class="price">Rs. 1,299</p>
+            
             <div class="product-description">
                 <h3>Description</h3>
                 <p>
@@ -46,7 +55,10 @@
                 <li>Compact charging case for easy portability</li>
                 </ul>
             </div>
-            <button class="btn">Add to Cart</button>
+            
+            <div class="product-actions">
+                <button class="btn btn-large">Add to Cart</button>
+            </div>
             </div>
         </div>
       </div>
