--- a/EasyCart/html/products.html
+++ b/EasyCart/html/products.html
@@ -32,21 +32,21 @@
                 <aside class="filter-sidebar">
                     <div class="filter-group">
                         <h3>Categories</h3>
-                        <label class="filter-option"><input type="checkbox" name="category" value="electronics"> Electronics</label>
-                        <label class="filter-option"><input type="checkbox" name="category" value="fashion"> Fashion</label>
-                        <label class="filter-option"><input type="checkbox" name="category" value="home"> Home & Living</label>
-                        <label class="filter-option"><input type="checkbox" name="category" value="beauty"> Beauty</label>
+                        <label class="filter-option"><input type="checkbox" name="category" value="electronics"><span class="checkmark"></span> Electronics</label>
+                        <label class="filter-option"><input type="checkbox" name="category" value="fashion"><span class="checkmark"></span> Fashion</label>
+                        <label class="filter-option"><input type="checkbox" name="category" value="home"><span class="checkmark"></span> Home & Living</label>
+                        <label class="filter-option"><input type="checkbox" name="category" value="beauty"><span class="checkmark"></span> Beauty</label>
                     </div>
                 
                     <div class="filter-group">
                         <h3>Brands</h3>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="boat"> boAt</label>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="noise"> Noise</label>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="hp"> HP</label>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="hrx"> HRX</label>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="fabindia"> Fabindia</label>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="mamaearth"> Mamaearth</label>
-                        <label class="filter-option"><input type="checkbox" name="brand" value="titan"> Titan</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="boat"><span class="checkmark"></span> boAt</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="noise"><span class="checkmark"></span> Noise</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="hp"><span class="checkmark"></span> HP</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="hrx"><span class="checkmark"></span> HRX</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="fabindia"><span class="checkmark"></span> Fabindia</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="mamaearth"><span class="checkmark"></span> Mamaearth</label>
+                        <label class="filter-option"><input type="checkbox" name="brand" value="titan"><span class="checkmark"></span> Titan</label>
                     </div>
 
                     <button class="btn w-100" onclick="clearFilters()">Clear Filters</button>
